# OOP_lab2

./: CMakeLists.txt  README  array.h  main.cpp  octal.cpp  octal.h  tests.cpp
include/: chararray.h  octal.h
source/: chararray.cpp  octal.cpp
